session12-kubernetes-ingress-configmaps-secrets/manifests/01-configmap-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod-demo
spec:
  containers:
  - name: test-app
    image: busybox:1.36
    command: ["sh", "-c", "echo Env Var: $APP_ENV; echo Config File:; cat /etc/config/app.properties; sleep 3600"]
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
  volumes:
  - name: config-volume
    configMap:
      name: app-config
