session12-kubernetes-ingress-configmaps-secrets/manifests/02-secret-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod-demo
spec:
  containers:
  - name: test-app
    image: busybox:1.36
    command: ["sh", "-c", "echo API_KEY injected: $API_KEY; echo Secret file:; cat /etc/secrets/DB_PASSWORD; sleep 3600"]
    volumeMounts:
    - name: secret-vol
      mountPath: /etc/secrets
      readOnly: true
  volumes:
  - name: secret-vol
    secret:
      secretName: app-db-credentials
